Addon product feature added